Wrap sidenav button + fix map memory leak

--- a/angular-src/src/app/places/filters/filters.component.scss
+++ b/angular-src/src/app/places/filters/filters.component.scss
@@ -81,6 +81,6 @@ agm-map {
   }
 }
 
-button.red  {
+a.red  {
   margin-top: 10px;
 }
